[package]
authors = ["sadsnake sadsnake@mixbytes.io"]
edition = '2018'
name = 'pallet-tablescore'
version = '0.1.0'

[dependencies]
safe-mix = { default-features = false, version = '1.0.0' }

[dependencies.codec]
package = "parity-scale-codec"
version = "1.0.0"
default-features = false
features = ["derive"]

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "frame-support"
rev = "5f246ffb4843cc527de51a889833e1c6015ecf80"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "frame-system"
rev = "5f246ffb4843cc527de51a889833e1c6015ecf80"

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/paritytech/substrate"
rev = "5f246ffb4843cc527de51a889833e1c6015ecf80"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-core"
rev = "5f246ffb4843cc527de51a889833e1c6015ecf80"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-io"
rev = "5f246ffb4843cc527de51a889833e1c6015ecf80"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-runtime"
rev = "5f246ffb4843cc527de51a889833e1c6015ecf80"

[dependencies.assets]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-generic-asset"
rev = "5f246ffb4843cc527de51a889833e1c6015ecf80"

[dependencies.rstd]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-std"
rev = "5f246ffb4843cc527de51a889833e1c6015ecf80"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
    'assets/std',
]
