[package]
authors = ["sadsnake sadsnake@mixbytes.io"]
edition = '2018'
name = 'pallet-tablescore'
version = '0.1.0'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
safe-mix = { default-features = false, version = '1.0.0' }

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "f5c6ebf966c126117717445416515987ecd13a40"

[dependencies.system]
default-features = false
package = 'frame-system'
git = "https://github.com/paritytech/substrate.git"
rev = "f5c6ebf966c126117717445416515987ecd13a40"

[dependencies.assets]
default-features = false
package = "pallet-generic-asset"
git = "https://github.com/paritytech/substrate.git"
rev = "f5c6ebf966c126117717445416515987ecd13a40"

[dependencies.timestamp]
default-features = false
package = "pallet-timestamp"
git = "https://github.com/paritytech/substrate.git"
rev = "f5c6ebf966c126117717445416515987ecd13a40"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "f5c6ebf966c126117717445416515987ecd13a40"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "f5c6ebf966c126117717445416515987ecd13a40"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "f5c6ebf966c126117717445416515987ecd13a40"

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev = "f5c6ebf966c126117717445416515987ecd13a40"

[dependencies.rstd]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
rev = "f5c6ebf966c126117717445416515987ecd13a40"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
    'assets/std',
]
